TDP-014: fix the mobile menu icon visible background color

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -261,6 +261,7 @@ code {
   width: 70px;
   z-index: 1;
   height: 70px;
+  background-color: transparent;
   cursor: pointer;
   border: none;
 }
